ajout de la font officiel

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="ricky">
         <nav>
             <a class="lien" href="#synopsis">Synopsis</a>
             <a class="lien"href="#personnages">Personnages</a>
