finalisation du site

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     
     <span>
      <p>© 2020 Rick and Morty, Inc. Tout droits réservé. </p> 
+     <p> <a class="italic" target="blank" href="https://www.adultswim.com/videos/rick-and-morty"> site officiel </a></p>
     </span>  
-    <p> <a target="blank" href="https://www.adultswim.com/videos/rick-and-morty"> site officiel </a></p>
 </body>
 </html>
