ajout fond blanc formulaire

--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
     <form>
         <div class="formu">
           <label for="name"></label>
-          <input placeholder="Votre nom" type="text" id="name" name="user_name" />
+          <input class="white" placeholder="Votre nom" type="text" id="name" name="user_name" />
         <div>
         <div>
           <label for="mail"></label>
-          <input placeholder="Votre e-mail" type="email" id="mail" name="user_email" />
+          <input class="white" placeholder="Votre e-mail" type="email" id="mail" name="user_email" />
         </div>
         <div>
           <label for="msg"></label>
-          <textarea id="msg" placeholder="Votre message" name="user_message"></textarea>
+          <textarea class="white" id="msg" placeholder="Votre message" name="user_message"></textarea>
         </div>
         <div class="buttone">
-            <button type="submit">Envoyer le message</button>
+            <button class="white" type="submit">Envoyer le message</button>
         </div>
     </form>
     
