ajustement des iframes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="back-iframe">
         <div class="titre1"><h2 id="saisons">Saison</h2></div>
-        <div class="textesaison"><p> Saison1</p> <p>Saison2</p> <p>Saison3</p></div>
+        <div class="textesaison"><p> Saison1</p> <p class="margin">Saison2</p> <p>Saison3</p></div>
         <div class="container">
             <div class="divi"><iframe class="bordure"  src="https://www.youtube.com/embed/fJ1np6NnMYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>                                                                                                                                                                                                                                                                                                                                                                                                                                                          
             <div class="divi"><iframe class="bordure"  src="https://www.youtube.com/embed/y23LCrlGQiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
